--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "cheet.js": "^0.3.3",
     "es6-promise": "^4.1.1",
     "moment": "^2.22.1",
     "nullsafe": "^1.0.5",
@@ -69,6 +70,7 @@
     "babel-core": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-latest": "^6.24.1",
+    "egg.js": "^1.0.0",
     "express": "^4.16.3",
     "form-serialize": "^0.7.2",
     "fuse-box": "^2.4.0",
